corrected navbar alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,7 +65,7 @@ header {
 }
 
 .logo {
-  margin-left: 5em;
+  margin-left: 10rem;
   //   margin: 0 auto;
   //   padding: 0;
   padding-top: 0.3rem;
